--- a/MovieApp/View/SlidingCollectionViewCell/SlidingCollectionViewCell.xib
+++ b/MovieApp/View/SlidingCollectionViewCell/SlidingCollectionViewCell.xib
@@ -20,7 +20,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yOx-QK-rQe">
                         <rect key="frame" x="0.0" y="0.0" width="370" height="205"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e5J-Cr-zyr">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e5J-Cr-zyr">
                                 <rect key="frame" x="0.0" y="0.0" width="370" height="205"/>
                             </imageView>
                         </subviews>
